--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "errorhandler": "^1.5.0",
     "express": "~4.15.2",
     "method-override": "^2.3.9",
+    "mongoose": "^4.11.3",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -23,6 +24,7 @@
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
     "@types/method-override": "0.0.29",
+    "@types/mongoose": "^4.7.19",
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.14",
     "@types/passport": "^0.3.3",
