--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "errorhandler": "^1.5.0",
     "express": "~4.15.2",
+    "jsonwebtoken": "^7.4.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.3",
     "morgan": "~1.8.1",
@@ -19,10 +21,12 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.0",
     "@types/body-parser": "^1.16.4",
     "@types/cookie-parser": "^1.3.30",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
+    "@types/jsonwebtoken": "^7.2.2",
     "@types/method-override": "0.0.29",
     "@types/mongoose": "^4.7.19",
     "@types/morgan": "^1.7.32",
