--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "errorhandler": "^1.5.0",
     "express": "~4.15.2",
+    "express-session": "^1.15.4",
     "jsonwebtoken": "^7.4.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.3",
@@ -26,6 +27,7 @@
     "@types/cookie-parser": "^1.3.30",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
+    "@types/express-session": "^1.15.1",
     "@types/jsonwebtoken": "^7.2.2",
     "@types/method-override": "0.0.29",
     "@types/mongoose": "^4.7.19",
