add newman test for all school actions by admin

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "nodemon": "nodemon ./bin/www"
+    "nodemon": "nodemon ./bin/www",
+    "newman_local": "newman run newman_test/mcq-app_newman_test.json -e newman_test/Local_dev.postman_environment.json"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
