--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.0",
     "ng-sidebar": "^6.0.1",
     "ng2-validation": "^4.2.0",
+    "ngx-cookie": "^1.0.0",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   },
