--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^4.3.6",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
     "angular2-perfect-scrollbar": "^2.0.6",
+    "angular2-text-mask": "^8.0.4",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.0",
     "ng-sidebar": "^6.0.1",
+    "ng2-toastr": "^4.1.2",
     "ng2-validation": "^4.2.0",
     "ngx-cookie": "^1.0.0",
     "rxjs": "^5.4.3",
